tests/snapshots/examples_fixtures/type_system__failing__126_list_comprehension_missing_close_bracket.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/126_list_comprehension_missing_close_bracket.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `]` to close list comprehension.

  examples/type_system/failing/126_list_comprehension_missing_close_bracket.flx:2:1
  |
2 | let after = 3
  | ^^^

Hint:
  List comprehensions use `[expr | x <- xs, ...]`.
== stdout ==
<not executed>
