tests/snapshots/examples_fixtures/type_system__failing__128_lambda_missing_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/128_lambda_missing_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Lambda Arrow

I was expecting `->` after the lambda parameters, but I found an identifier.

  examples/type_system/failing/128_lambda_missing_arrow.flx:1:10
  |
1 | let f = /x x + 1
  |          ^
  |          - this lambda parameter list ends here

Help:
  Use `/x -> expr` or `/(x, y) -> expr`.
== stdout ==
<not executed>
