tests/snapshots/examples_fixtures/type_system__failing__130_do_missing_brace.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/130_do_missing_brace.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Do Block

This `do` block needs to start with `{`.

  examples/type_system/failing/130_do_missing_brace.flx:1:12
  |
1 | let y = do x + 1
  |            ^
  |            - This looks like the `do` block body

Help:
  Try adding `{` after `do`.
== stdout ==
<not executed>
