tests/snapshots/examples_fixtures/type_system__failing__131_call_arg_span_precision.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/131_call_arg_span_precision.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `pair`.

  examples/type_system/failing/131_call_arg_span_precision.flx:4:22
  |
1 | fn pair(a: Int, b: Int) -> Int { a + b }
  | ---------------------------------------- `pair` expects `Int` as the 2nd parameter
2 | 
3 | fn main() -> Unit {
4 |     let _x = pair(1, "oops")
  |                      ^^^^^^
  |                      ------ this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 2nd argument.
== stdout ==
<not executed>
