tests/snapshots/examples_fixtures/type_system__failing__133_if_branch_value_span_precision.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/type_system/failing/133_if_branch_value_span_precision.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The branches of this `if` expression produce different types.

  --> examples/type_system/failing/133_if_branch_value_span_precision.flx:2:36
  |
2 |     let _x = if true { 42 } else { "nope" }
  |                                    ^^^^^^
  |                                    ------ `else` branch returns `String`
  |                        -- `then` branch returns `Int`

Help:
  Both branches must return the same type. Change one branch to match `Int` or `String`.
== stdout ==
<not executed>
